# SteamAchievementManager-Enhanced

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: release-macos.yml  release-windows.yml  release.yml
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/docs/: 2026-06-16-steam-and-routing-design.md
web/scripts/: shots.mjs
web/src/: App.tsx  index.css  types.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
web/src/components/: Achievements.tsx  AppLayout.tsx  GameHeader.tsx  GameScreen.tsx  GameScroll.tsx  Library.tsx  Panes.tsx  Resizer.tsx  Settings.tsx  Sidebar.tsx  Statistics.tsx  TitleBar.tsx  Toast.tsx  UpdateBanner.tsx
web/src/components/ui/: AchIcon.tsx  BrandMark.tsx  Cover.tsx  Seg.tsx  coverUrls.ts  useCoverUrl.ts
web/src/components/ui/__tests__/: coverUrls.test.ts
web/src/data/: cache.ts  games.ts  index.ts  mockSource.ts  source.ts  steamAppIds.ts  tauriSource.ts  update.ts
web/src/data/__tests__/: mockSource.test.ts
web/src/i18n/: index.ts
web/src/lib/: achievementView.ts  achievements.ts  appWindow.ts  library.ts  styles.ts  theme.ts  useHover.ts  version.ts  virtual.ts
web/src/lib/__tests__/: achievements.test.ts  version.test.ts  virtual.test.ts
web/src/state/: AppContext.tsx  applyLoadedGame.ts  applyPartialSave.ts  detailCache.ts  gameListMerge.ts  store.ts
web/src/state/__tests__/: applyLoadedGame.test.ts  applyPartialSave.test.ts  detailCache.test.ts  gameListMerge.test.ts
web/steam-core/: Cargo.toml
web/steam-core/src/: imp_macos.rs  lib.rs
