[package]
name = "steam-core"
version = "0.1.0"
edition = "2021"
description = "Local Steam client (internal steamclient.dll interfaces) read/write layer, ported from gibbed's SAM."

[lib]
name = "steam_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
