[package]
name = "steam-core"
version = "0.1.0"
edition = "2021"
description = "Local Steam client (internal steamclient.dll interfaces) read/write layer, ported from gibbed's SAM."

[lib]
name = "steam_core"
path = "src/lib.rs"

# Read-only ownership probe: `cargo run --bin probe <appid>...`. Never writes.
[[bin]]
name = "probe"
path = "src/bin/probe.rs"

# Read-only per-game achievement read: `cargo run --bin read-game <appid>`. Never writes.
[[bin]]
name = "read-game"
path = "src/bin/read-game.rs"

# Read-only full-library scan timing: `cargo run --release --bin list-owned`. Never writes.
[[bin]]
name = "list-owned"
path = "src/bin/list-owned.rs"

# File-only completion from the local stats cache (no Steam connection, never
# launches the game): `cargo run --bin completion <appid>`. Never writes.
[[bin]]
name = "completion"
path = "src/bin/completion.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
